# rustmorphism

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
example/: Cargo.toml  build.rs
example/src/: main.rs
polymorphic_fn/: Cargo.toml
polymorphic_fn/src/: lib.rs
src/: lib.rs  main.rs
