[package]
name = "polymorphic-framework"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A framework for creating polymorphic Rust code that changes its signature with each build"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[build-dependencies]
rand = "0.8.5"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = []
examples = []
