[package]
name = "rustmorphism"
version = "0.1.0"
edition = "2021"
description = "A Rust macro for creating functions with multiple implementations that are deterministically selected at compile-time"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/EduContin/rustmorphism"
documentation = "https://docs.rs/rustmorphism"
readme = "README.md"
keywords = ["macro", "polymorphism", "proc-macro", "compile-time"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"